Update CI config, project files, and coding standards
- Enhanced CI configuration to ignore specific file types and added a job for uploading TRX test results.
- Updated language version in `BookLoggerApp.Core.csproj` and `BookLoggerApp.csproj`, and adjusted warning settings.
- Updated Visual Studio version in `BookLoggerApp.sln` and included an `.editorconfig` file for coding standards.
- Added a CI badge to `README.md` for project visibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,16 @@ name: CI
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '**/*.md'
+      - '**/*.png'
+      - '**/*.jpg'
+      - '**/*.jpeg'
+      - '**/*.svg'
+      - '.github/**'     
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build-test:
@@ -14,13 +22,11 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
-
       - uses: actions/cache@v4
         with:
           path: ~/.nuget/packages
           key: nuget-${{ runner.os }}-${{ hashFiles('**/*.csproj') }}
           restore-keys: nuget-${{ runner.os }}-
-
       - run: dotnet restore
       - run: dotnet build -c Release --no-restore
       - name: Run Tests (trx)
@@ -32,4 +38,9 @@ jobs:
           name: xUnit Tests
           path: "**/TestResults/*.trx"
           reporter: dotnet-trx
-
+      - name: Upload TRX (optional)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results-trx
+          path: "**/TestResults/*.trx"
