--- a/BookLoggerApp.Core/BookLoggerApp.Core.csproj
+++ b/BookLoggerApp.Core/BookLoggerApp.Core.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<LangVersion>latest</LangVersion>
+	<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+	<Nullable>enable</Nullable>
+	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
