Enhance BookLoggerApp with new features and improvements
- Updated launch configurations for MAUI Windows App in `launch.json`.
- Added new build and run tasks for MAUI Windows in `tasks.json`.
- Introduced new view models: `DashboardViewModel`, `BookshelfViewModel`, `GoalsViewModel`, `ReadingViewModel`, and `SettingsViewModel`.
- Implemented new pages: `Dashboard.razor`, `Bookshelf.razor`, `Goals.razor`, `Reading.razor`, and `Settings.razor`.
- Enhanced navigation menu with new links and improved layout in `NavMenu.razor`.
- Added new components for displaying books and goals, including `BookCard.razor` and `GoalCard.razor`.
- Updated CSS for better styling and responsiveness across the application.
- Improved error handling and loading states in view models.
- Refactored existing code for better maintainability and performance.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,40 +2,42 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "build-maui-windows",
             "command": "dotnet",
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/BookLoggerApp.sln",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary;ForceNoAlign"
+                "${workspaceFolder}/BookLoggerApp/BookLoggerApp.csproj",
+                "-f",
+                "net9.0-windows10.0.19041.0",
+                "-c",
+                "Debug"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         },
         {
-            "label": "publish",
+            "label": "run-maui-windows",
             "command": "dotnet",
-            "type": "process",
+            "type": "shell",
             "args": [
-                "publish",
-                "${workspaceFolder}/BookLoggerApp.sln",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary;ForceNoAlign"
+                "build",
+                "${workspaceFolder}/BookLoggerApp/BookLoggerApp.csproj",
+                "-t:Run",
+                "-f",
+                "net9.0-windows10.0.19041.0",
+                "-c",
+                "Debug"
             ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "watch",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "watch",
-                "run",
-                "--project",
-                "${workspaceFolder}/BookLoggerApp.sln"
-            ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new",
+                "focus": false
+            }
         }
     ]
 }
