--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,20 +2,26 @@
     "version": "0.2.0",
     "configurations": [
         {
-            // Use IntelliSense to find out which attributes exist for C# debugging
-            // Use hover for the description of the existing attributes
-            // For further information visit https://github.com/dotnet/vscode-csharp/blob/main/debugger-launchjson.md
-            "name": ".NET Core Launch (console)",
+            "name": "Launch MAUI Windows App",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
-            // If you have changed target frameworks, make sure to update the program path.
+            "preLaunchTask": "build-maui-windows",
             "program": "${workspaceFolder}/BookLoggerApp/bin/Debug/net9.0-windows10.0.19041.0/win10-x64/BookLoggerApp.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/BookLoggerApp",
-            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "cwd": "${workspaceFolder}/BookLoggerApp/bin/Debug/net9.0-windows10.0.19041.0/win10-x64",
             "console": "internalConsole",
-            "stopAtEntry": false
+            "stopAtEntry": false,
+            "justMyCode": false,
+            "requireExactSource": false,
+            "enableStepFiltering": true
+        },
+        {
+            "name": "Run MAUI Windows App (no debug)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "run-maui-windows",
+            "console": "internalConsole",
+            "internalConsoleOptions": "neverOpen"
         },
         {
             "name": ".NET Core Attach",
