Verbesserung der mobilen UX und Berechtigungsverwaltung
Die Änderungen umfassen:
- Hinzufügen eines Ladebildschirms mit Spinner (`index.html`, `app.css`).
- Einführung eines umklappbaren Filtersystems und eines FAB für das Hinzufügen von Büchern (`Bookshelf.razor`, `bookshelf.css`).
- Optimierung der Darstellung für mobile Geräte in mehreren CSS-Dateien (`bookdetail.css`, `celebrations.css`, `components.css`, `plantshop.css`, `reading.css`).
- Vereinfachung und Aktualisierung von SVG-Icons für bessere Android-Kompatibilität (`appicon.svg`, `appiconfg.svg`, `splash.svg`).
- Einführung der Klasse `CustomWebChromeClient` zur Verwaltung von Kamera- und Mikrofonberechtigungen (`CustomWebChromeClient.cs`).
- Hinzufügen eines neuen `PermissionService` zur zentralen Verwaltung von Kameraberechtigungen (`PermissionService.cs`).
- Wechsel von Singleton- zu Transient-Registrierungen für `DbContext` und Repositories zur Vermeidung von Konkurrenzproblemen (`MauiProgram.cs`).
- Entfernen der Validierung für Pflanzennamen und Verbesserung der Benutzerfreundlichkeit im `PlantShop` (`PlantShopViewModel.cs`, `PlantShop.razor`).
- Löschen der nicht mehr benötigten Datei `Frontendbug.PNG`.

Diese Änderungen verbessern die Benutzerfreundlichkeit, die mobile Darstellung und die Integration von Berechtigungen in der Anwendung.

--- a/BookLoggerApp/BookLoggerApp.csproj
+++ b/BookLoggerApp/BookLoggerApp.csproj
@@ -24,7 +24,7 @@
 		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 
         <!-- Display name -->
-        <ApplicationTitle>BookLoggerApp</ApplicationTitle>
+        <ApplicationTitle>Book Logger</ApplicationTitle>
 
         <!-- App Identifier -->
         <ApplicationId>com.companyname.bookloggerapp</ApplicationId>
@@ -46,10 +46,10 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#C49664" />
 
         <!-- Splash Screen -->
-        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#C49664" BaseSize="128,128" />
 
         <!-- Images -->
         <MauiImage Include="Resources\Images\*" />
