--- a/BookLoggerApp.Tests/BookLoggerApp.Tests.csproj
+++ b/BookLoggerApp.Tests/BookLoggerApp.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0" />
+    <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="xunit" Version="2.9.0" />
     <PackageReference Include="FluentAssertions" Version="8.6.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
