--- a/BookLoggerApp/BookLoggerApp.csproj
+++ b/BookLoggerApp/BookLoggerApp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
         <TargetFrameworks>net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
@@ -24,7 +24,7 @@
 		<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 
         <!-- Display name -->
-        <ApplicationTitle>LoveLit</ApplicationTitle>
+        <ApplicationTitle>BookHeart</ApplicationTitle>
 
         <!-- App Identifier -->
         <ApplicationId>com.companyname.bookloggerapp</ApplicationId>
