--- a/BookLoggerApp.Infrastructure/BookLoggerApp.Infrastructure.csproj
+++ b/BookLoggerApp.Infrastructure/BookLoggerApp.Infrastructure.csproj
@@ -9,7 +9,7 @@
 
 
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1" Condition="'$(Configuration)' == 'Debug'">
-      <IncludeAssets>build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.1" />
