--- a/BookLoggerApp/BookLoggerApp.csproj
+++ b/BookLoggerApp/BookLoggerApp.csproj
@@ -27,7 +27,7 @@
         <ApplicationTitle>BookHeart</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.bookloggerapp</ApplicationId>
+        <ApplicationId>com.bookheart.app</ApplicationId>
 
         <!-- Versions -->
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -80,6 +80,7 @@
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
+        <PackageReference Include="Plugin.LocalNotification" Version="13.0.0" />
         <PackageReference Include="ZXing.Net.Maui.Controls" Version="0.7.2" />
 
 
